--- a/index.html
+++ b/index.html
@@ -1,45 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <code>
-            .systitle {
-                font-size: 28px;
-                font-weight: 700;
-                width: full;
-                text-align: right;
-              /* text animation attributes beginning */
-                animation: pop;
-                animation-duration: 2s;
-                animation-iteration-count: infinite;
-                animation-timing-function: linear;
-                -moz-animation: pop;
-                -moz-animation-duration: 2s;
-                -moz-animation-iteration-count: infinite;
-                -moz-animation-timing-function: linear;
-                -webkit-animation: pop;
-                -webkit-animation-duration: 2s;
-                -webkit-animation-iteration-count: infinite;
-                -webkit-animation-timing-function: linear;
-              /* text animation attributes ending */
-              }
-              
-              /* pop text animation beginning */
-              @keyframes pop {
-              from {transform:scale(0.95)rotate(5deg);}
-              50% {transform:scale(1.02)rotate(5deg);}
-              to {transform:scale(0.95)rotate(5deg);}
-              }
-              @-webkit-keyframes pop {
-              from {-webkit-transform:scale(0.95)rotate(5deg);}
-              50% {-webkit-transform:scale(1.02)rotate(5deg);}
-              to {-webkit-transform:scale(0.95)rotate(5deg);}
-              }    
-                @-moz-keyframes pop {
-              from {-moz-transform:scale(0.95)rotate(5deg);}
-              50% {-moz-transform:scale(1.02)rotate(5deg);}
-              to {-moz-transform:scale(0.95)rotate(5deg);}
-              } 
-              /* pop text animation ending */
-        </code>
+        idk man
     </body>
 </html>
