--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        idk man
-    </body>
+<head>
+<link rel="stylesheet" href="/stray.css">
+</head>
+<body>
+
+<img id="wolfart" src="/sntrypic14.png" alt="art of a wolf biting the hilt of a sword, 
+the sword's blade penetrating it's stomach © daisypinkpaw (tumblr)";> 
+<span class="systitle">
+    THE <b>STRAYS</b>! 
+</span>
+
+</body>
 </html>
