--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 </head>
 <body>
 
-<img id="wolfart" src="/sntrypic14.png" alt="art of a wolf biting the hilt of a sword, 
-the sword's blade penetrating it's stomach © daisypinkpaw (tumblr)";> 
-<span class="systitle">
-    THE <b>STRAYS</b>! 
-</span>
+<div class="profile">
+<div class="profile-image">
+<img src="https://bundles.cc/api/media/file/@stray/sntrypic14.png" alt="art of a wolf biting the hilt of a sword, the sword's blade penetrating it's stomach © daisypinkpaw (tumblr)" title="artist © daisypinkpaw (tumblr)";>
+</div>
+<div class="profile-about">
+    <div id="profile-title">THE <b>STRAYS</b>!</div>
+</div>
+</div>
 
 </body>
 </html>
