Changes to be committed: 	modified:   index.html 	new file:   sntrypic22.png 	new file:   sntrypic24.png 	new file:   style.css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="/stray.css">
+    <link rel="stylesheet" href="/stray.css"/>
 </head>
 <body>
-
-<div class="profile">
-<div class="profile-image">
-<img src="https://bundles.cc/api/media/file/@stray/sntrypic14.png" alt="art of a wolf biting the hilt of a sword, the sword's blade penetrating it's stomach © daisypinkpaw (tumblr)" title="artist © daisypinkpaw (tumblr)";>
-</div>
-<div class="profile-about">
-    <div id="profile-title">THE <b>STRAYS</b>!</div>
-</div>
-</div>
-
+    <div class="main-body">
+        <img src="https://bundles.cc/f/@stray/sntrypic24.png" title="art © canisfamiliars!" 
+        alt="art by canisfamiliars from tumblr. it's of a wolf eating a star." class="main-image"/>
+        
+        <div class="main-info">
+            <div class="main-title">
+            THE STRAYS!
+            </div>
+            <div class="main-names">
+            <span class="text-names"><b>stray</b></span> or <span class="text-names"><b>strays.</b></span>
+            &nbsp <span id="text-prns"><a href="https://pronouns.cc/@chrysocyon"><i>it/its.</i></a></span><br/>
+            </div>
+            <div class="main-text">
+                <b>twenty-one.</b> brown <b>indigenous.</b>
+                disabled. <b>queer</b> and <b>cripple punk.</b>
+            </div>
+            <div class="main-bottom">
+                <div>
+                    <a href="">
+                        <img id="button-img" src="https://bundles.cc/f/@stray/sntrypic22.png" 
+                        alt="art by isnyr from tumblr. it's of a wolf's face, surrounded by a few stars." title="art © isnyr!"/>
+                    </a>
+                </div>
+                <div>
+                    autistic. <b>c-DID</b> system.<br/>
+                    <b>clusterbc.</b> schizospec.
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
