modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="/stray.css"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
 </head>
 <body>
     <div class="main-body">
@@ -16,9 +17,11 @@
             <span class="text-names"><b>stray</b></span> or <span class="text-names"><b>strays.</b></span>
             &nbsp <span id="text-prns"><a href="https://pronouns.cc/@chrysocyon"><i>it/its.</i></a></span><br/>
             </div>
-            <div class="main-text">
-                <b>twenty-one.</b> brown <b>indigenous.</b>
-                disabled. <b>queer</b> and <b>cripple punk.</b>
+            <div class="main-top">
+                <div id="top-text">
+                    <b>twenty-one.</b> brown <b>indigenous.</b><br/>
+                    disabled. <b>queer</b> and <b>cripple punk.</b>
+                </div>
             </div>
             <div class="main-bottom">
                 <div>
@@ -27,9 +30,9 @@
                         alt="art by isnyr from tumblr. it's of a wolf's face, surrounded by a few stars." title="art © isnyr!"/>
                     </a>
                 </div>
-                <div>
-                    autistic. <b>c-DID</b> system.<br/>
-                    <b>clusterbc.</b> schizospec.
+                <div id="bottom-text">
+                    <div>autistic. <b>c-DID</b> system.</div>
+                    <div><b>clusterbc.</b> schizospec.</div>
                 </div>
             </div>
         </div>
