modified:   index.html 	new file:   magpod/archives/characters/home.html 	new file:   magpod/archives/episodes/home.html 	new file:   magpod/archives/home.html 	new file:   magpod/home.html 	new file:   magpod/protocol/characters/home.html 	new file:   magpod/protocol/episodes/home.html 	new file:   magpod/protocol/home.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -5,37 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
 </head>
 <body>
-    <div class="main-body">
-        <img src="https://bundles.cc/f/@stray/sntrypic24.png" title="art © canisfamiliars!" 
-        alt="art by canisfamiliars from tumblr. it's of a wolf eating a star." class="main-image"/>
-        
-        <div class="main-info">
-            <div class="main-title">
-            THE STRAYS!
-            </div>
-            <div class="main-names">
-            <span class="text-names"><b>stray</b></span> or <span class="text-names"><b>strays.</b></span>
-            &nbsp <span id="text-prns"><a href="https://pronouns.cc/@chrysocyon"><i>it/its.</i></a></span><br/>
-            </div>
-            <div class="main-top">
-                <div id="top-text">
-                    <b>twenty-one.</b> brown <b>indigenous.</b><br/>
-                    disabled. <b>queer</b> and <b>cripple punk.</b>
-                </div>
-            </div>
-            <div class="main-bottom">
-                <div>
-                    <a href="">
-                        <img id="button-img" src="https://bundles.cc/f/@stray/sntrypic22.png" 
-                        alt="art by isnyr from tumblr. it's of a wolf's face, surrounded by a few stars." title="art © isnyr!"/>
-                    </a>
-                </div>
-                <div id="bottom-text">
-                    <div>autistic. <b>c-DID</b> system.</div>
-                    <div><b>clusterbc.</b> schizospec.</div>
-                </div>
-            </div>
-        </div>
-    </div>
+    see <a href="/magpod/home.html">here</a> for very <br>
+    autism-driven documentation on <b>the magnus archives</b> <br>
+    and <b>the magnus protocol.</b> this is mostly for me <br>
+    (i don't like how google docs are but i wanted to <br>
+    do this somewhere, so i'm taking advantage of this <br>
+    github feature) but you're free to see it!
 </body>
 </html>
