modified:   index.html 	modified:   magpod/home.html 	modified:   magpod/protocol/home.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="/style.css"/>
-    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    see <a href="/magpod/home.html">here</a> for very <br>
-    autism-driven documentation on <b>the magnus archives</b> <br>
-    and <b>the magnus protocol.</b> this is mostly for me <br>
-    (i don't like how google docs are but i wanted to <br>
-    do this somewhere, so i'm taking advantage of this <br>
-    github feature) but you're free to see it!
+    <div id="index-box">my personal docs/wiki for <i>the magnus archives</i> and <i>the magnus protocol</i> 
+    <a href="/magpod/home.html">here</a>!</div>
 </body>
 </html>
