--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <span id="index-box">my personal docs/wiki for <i>the magnus archives</i> and <i>the magnus protocol</i> 
-    <a href="/magpod/home.html">here</a>!</span>
+    <div id="index-box">my personal docs/wiki <a href="/magpod/home.html">here</a>
+                         for <i>the magnus archives</i> 
+                         and <i>the magnus protocol</i>!</div>
 </body>
 </html>
