--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="index-box">my personal docs/wiki <a href="/magpod/home.html">here</a>
-                         for <i>the magnus archives</i> 
-                         and <i>the magnus protocol</i>!</div>
+    <div id="index-box">
+        <span id="index-txt">
+            my personal docs/wiki <a href="/magpod/home.html">here</a>
+            for <i>the magnus archives</i> 
+            and <i>the magnus protocol</i>!
+        </span>
+    </div>
 </body>
 </html>
