--- a/magpod.html
+++ b/magpod.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <a href="/magpod/archives.html">the magnus archives analyses</a><br>
+    <a href="/magpod/protocol.html">the magnus protocol analyses</a>
 </body>
 </html>
