--- a/magpod/protocol/episodes.html
+++ b/magpod/protocol/episodes.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="/magpod/archives/home.html">the magnus archives analyses</a><br>
-    <a href="/magpod/protocol/home.html">the magnus protocol analyses</a>
+    <a href="/magpod/protocol/episodes/tmp001.html">episode one</a>
 </body>
 </html>
