--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -9,11 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>TMP001: First Shift</h1>
-    <h2>TMP001: First Shift</h2>
-    <h3>TMP001: First Shift</h3>
-    <h4>TMP001: First Shift</h4>
-    <h5>TMP001: First Shift</h5>
-    <h6>TMP001: First Shift</h6>
+    <h2 class="protocol">TMP<span class="episodenum">001</span>: First Shift</h2>
+    <div class="tmp-episodedesc">
+        <b>CAT1RBC5257-12052022-09012024</b><br>
+        Reanimation (Partial) -/- Regret [Email]<br>
+        <b>CAT23RAB2155-10042022-09012024</b><br>
+        Transformation (eyes) -/- Trespass [chat log].
+    </div>
 </body>
 </html>
