--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -9,12 +9,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2 class="protocol">TMP<span class="episodenum">001</span>: First Shift</h2>
-    <div class="tmp-episodedesc">
+    <h2 class="protocol">TMP<span class="tmpnum">001</span>: First Shift</h2>
+    <div class="tmpepdesc">
         <b>CAT1RBC5257-12052022-09012024</b><br>
         Reanimation (Partial) -/- Regret [Email]<br>
         <b>CAT23RAB2155-10042022-09012024</b><br>
         Transformation (eyes) -/- Trespass [chat log].
+    </div>
+    <h3 class="protocol">The (First) Report</h3>
+    <p class="sections">
+        <span class="protocol">
+            Case File:
+        </span>
+        CAT1RBC5257-12052022-09012024
+    </p>
+    <div class="tmpquote">
+        episode quotee
     </div>
 </body>
 </html>
