--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,22 +9,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2 class="protocol">TMP<span class="tmpnum">001</span>: First Shift</h2>
-    <div class="tmpepdesc">
-        <b>CAT1RBC5257-12052022-09012024</b><br>
-        Reanimation (Partial) -/- Regret [Email]<br>
-        <b>CAT23RAB2155-10042022-09012024</b><br>
-        Transformation (eyes) -/- Trespass [chat log].
-    </div>
-    <h3 class="protocol">The (First) Report</h3>
-    <p class="sections">
-        <span class="protocol">
-            Case File:
-        </span>
-        CAT1RBC5257-12052022-09012024
-    </p>
-    <div class="tmpquote">
-        episode quotee
-    </div>
+    <main>
+        <div class="analysis">
+            <section>
+                <h3 class="protocol">TMP<span class="tmpnum">001</span>: First Shift</h3>
+
+                <div class="tmpepdesc">
+                    <b>CAT1RBC5257-12052022-09012024</b><br>
+                    Reanimation (Partial) -/- Regret [Email]<br>
+                    <b>CAT23RAB2155-10042022-09012024</b><br>
+                    Transformation (eyes) -/- Trespass [chat log].
+                </div>
+            </section>
+            <section>
+                <h4 class="protocol">The (First) Report</h4>
+
+                <p class="sections">
+                    <span class="protocol">
+                        Case File:
+                    </span>
+                    CAT1RBC5257-12052022-09012024
+                </p>
+            </section>
+            <section>
+                <h6 class="tmpquote">
+                    episode quotee
+                </h6>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
