modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -12,7 +12,7 @@
     <main>
         <div class="analysis">
             <section>
-                <h3 class="protocol">TMP<span class="tmpnum">001</span>: First Shift</h3>
+                <h2 class="protocol">TMP<span class="epnum">001</span>: First Shift</h2>
 
                 <div class="tmpepdesc">
                     <b>CAT1RBC5257-12052022-09012024</b><br>
@@ -22,17 +22,17 @@
                 </div>
             </section>
             <section>
-                <h4 class="protocol">The (First) Report</h4>
+                <h3 class="protocol">The (First) Report</h3>
 
                 <p class="sections">
-                    <span class="protocol">
+                    <span class="prompt protocol">
                         Case File:
                     </span>
                     CAT1RBC5257-12052022-09012024
                 </p>
             </section>
             <section>
-                <h6 class="tmpquote">
+                <h6 class="protocol">
                     episode quotee
                 </h6>
             </section>
