modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -9,34 +9,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <div class="analysis">
-            <section>
-                <h2 class="protocol">TMP<span class="epnum">001</span>: First Shift</h2>
+    <div class="page">
+        <article>
+            <div class="analysis">
+                <section>
+                    <h2 class="protocol">TMP<span class="epnum">001</span>: First Shift</h2>
 
-                <div class="tmpepdesc">
-                    <b>CAT1RBC5257-12052022-09012024</b><br>
-                    Reanimation (Partial) -/- Regret [Email]<br>
-                    <b>CAT23RAB2155-10042022-09012024</b><br>
-                    Transformation (eyes) -/- Trespass [chat log].
-                </div>
-            </section>
-            <section>
-                <h3 class="protocol">The (First) Report</h3>
+                    <div class="tmpepdesc">
+                        <b>CAT1RBC5257-12052022-09012024</b><br>
+                        Reanimation (Partial) -/- Regret [Email]<br>
+                        <b>CAT23RAB2155-10042022-09012024</b><br>
+                        Transformation (eyes) -/- Trespass [chat log].
+                    </div>
+                </section>
+                <section>
+                    <h3 class="protocol">The (First) Report</h3>
 
-                <p class="sections">
-                    <span class="prompt protocol">
-                        Case File:
-                    </span>
-                    CAT1RBC5257-12052022-09012024
-                </p>
-            </section>
-            <section>
-                <h6 class="protocol">
-                    episode quotee
-                </h6>
-            </section>
-        </div>
-    </main>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Case File:
+                        </span>
+                        CAT1RBC5257-12052022-09012024
+                    </p>
+                </section>
+                <section>
+                    <h6 class="protocol">
+                        episode quotee
+                    </h6>
+                </section>
+            </div>
+        </article>
+        <aside>
+            <div class="sidebar">
+                um
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
