modified:   magpod/archives.html 	modified:   magpod/protocol.html

--- a/magpod/archives.html
+++ b/magpod/archives.html
@@ -11,5 +11,6 @@
 <body>
     <a href="/magpod/archives/characters.html">character analyses</a><br>
     <a href="/magpod/archives/episodes.html">episode analyses</a>
+    these will be added to during the course of my relisten :]
 </body>
 </html>
