--- a/magpod/protocol.html
+++ b/magpod/protocol.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <a href="/magpod/protocol/characters.html">character analyses</a><br>
-    <a href="/magpod/protocol/episodes.html">episode analyses</a>
+    <a href="/magpod/protocol/episodes.html">episode analyses</a><br>
+    these will be added to as the podcast comes out :]
 </body>
 </html>
