--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -31,6 +31,77 @@
                         </span>
                         CAT1RBC5257-12052022-09012024
                     </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Report Giver/Subject:
+                        </span>
+                        Harriet Winstead
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Report Reader: 
+                        </span>
+                        NORRIS
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Report Appearances:
+                        </span>
+                        ‘Arthur’, Darla Winstead
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Report Locations: 
+                        </span>
+                        Grantham Cemetery
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Report Summary:
+                        </span>
+                        This report follows an email from Harriet (hpw332@mailpod.com) to 
+                        someone named ‘Darla’ (dwinny@mailpod.com), who can be assumed to 
+                        be her family member due to sharing surnames. Harriet had been speaking 
+                        with a consultant (most likely a grief consultant), whose name was never 
+                        mentioned, as she was mourning the loss of Arthur, her late partner of 
+                        20 years. The consultant told Harriet to go to Grantham Cemetery over 
+                        the phone one night; She mentions how he sounded excited in an 
+                        off-putting way on that phone call, which was unlike him. At the 
+                        cemetery, instead of the consultant, she finds ‘Arthur’; A discolored, 
+                        mismatched, undead version of Arthur. It sounded just like Arthur, and 
+                        it recognized Harriet. When asked, it responded that it was ‘some of’ 
+                        Arthur. She runs, and doesn’t get followed. Harriet asks Darla if she’s 
+                        free, as she’s afraid of staying at her home due to her newfound fear 
+                        of Arthur.
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Entity Influence: 
+                        </span>
+                        Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
+                        reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
+                        are within the suddenly off-putting behavior of the consultant, 
+                        ‘Arthur’s features being mismatched, mentions of his shape being ‘wrong’, 
+                        something having potentially been pressing against his skin from the 
+                        inside, and ‘Arthur’ saying “Some of him.” in response to Harriet.
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Follow-up Summary:
+                        </span>
+                        Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
+                        let him do, as she believes nobody reads the reports they file. Gwen steps 
+                        in and suggests, instead, to file it under ‘Reanimation, partial’ and 
+                        cross-link it with ‘regret.’ She also adds that it could fall under 
+                        ‘Amalgamative, semi.’ Sam goes with Gwen’s first suggestion, which Alice 
+                        doesn’t exactly like.
+                    </p>
+                    <p class="sections">
+                        <span class="prompt protocol">
+                            Of Significance:
+                        </span>
+                        Nothing of particular significance has been noted as of yet in this report.
+                    </p>
                 </section>
                 <section>
                     <h6 class="protocol">
