new file:   magpod/protocol/episode analysis template.html 	modified:   magpod/protocol/episodes/tmp001.html

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -58,7 +58,7 @@
                     <p class="sections">
                         <span class="prompt protocol">
                             Report Summary:
-                        </span>
+                        </span><br>
                         This report follows an email from Harriet (hpw332@mailpod.com) to 
                         someone named ‘Darla’ (dwinny@mailpod.com), who can be assumed to 
                         be her family member due to sharing surnames. Harriet had been speaking 
@@ -77,7 +77,7 @@
                     <p class="sections">
                         <span class="prompt protocol">
                             Entity Influence: 
-                        </span>
+                        </span><br>
                         Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
                         reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
                         are within the suddenly off-putting behavior of the consultant, 
@@ -88,7 +88,7 @@
                     <p class="sections">
                         <span class="prompt protocol">
                             Follow-up Summary:
-                        </span>
+                        </span><br>
                         Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
                         let him do, as she believes nobody reads the reports they file. Gwen steps 
                         in and suggests, instead, to file it under ‘Reanimation, partial’ and 
@@ -99,13 +99,13 @@
                     <p class="sections">
                         <span class="prompt protocol">
                             Of Significance:
-                        </span>
+                        </span><br>
                         Nothing of particular significance has been noted as of yet in this report.
                     </p>
                 </section>
                 <section>
                     <h6 class="protocol">
-                        episode quotee
+                        ❝Episode quote.❞
                     </h6>
                 </section>
             </div>
