modified:   magpod/protocol/episodes/tmp001.html

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -112,7 +112,7 @@
         </article>
         <aside>
             <div class="sidebar">
-                um
+                The Magnus Protocol is a podcast distributed by Rusty Quill under the 4.0 International Sharealike Liscence
             </div>
         </aside>
     </div>
