modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -9,10 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="page">
+    <section class="page">
         <article>
             <div class="analysis">
-                <section>
+                <div>
                     <h2 class="protocol">TMP<span class="epnum">001</span>: First Shift</h2>
 
                     <div class="tmpepdesc">
@@ -21,8 +21,8 @@
                         <b>CAT23RAB2155-10042022-09012024</b><br>
                         Transformation (eyes) -/- Trespass [chat log].
                     </div>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3 class="protocol">The (First) Report</h3>
 
                     <p class="sections">
@@ -102,12 +102,12 @@
                         </span><br>
                         Nothing of particular significance has been noted as of yet in this report.
                     </p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h6 class="protocol">
                         ❝Episode quote.❞
                     </h6>
-                </section>
+                </div>
             </div>
         </article>
         <aside>
@@ -115,6 +115,6 @@
                 The Magnus Protocol is a podcast distributed by Rusty Quill under the 4.0 International Sharealike Liscence
             </div>
         </aside>
-    </div>
+    </section>
 </body>
 </html>
