modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -24,42 +24,47 @@
                 </div>
                 <div>
                     <h3 class="protocol">The (First) Report</h3>
-
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Case File:
-                        </span>
-                        CAT1RBC5257-12052022-09012024
-                    </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Report Giver/Subject:
-                        </span>
-                        Harriet Winstead
-                    </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Report Reader: 
-                        </span>
-                        NORRIS
-                    </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Report Appearances:
-                        </span>
-                        ‘Arthur’, Darla Winstead
-                    </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Report Locations: 
-                        </span>
-                        Grantham Cemetery
-                    </p>
+                    <div class="sections">
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Case File:
+                            </span>
+                            CAT1RBC5257-12052022-09012024
+                        </p>
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Report Giver/Subject:
+                            </span>
+                            Harriet Winstead
+                        </p>
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Report Reader: 
+                            </span>
+                            NORRIS
+                        </p>
+                    </div>
+                    <div class="sections">
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Report Appearances:
+                            </span>
+                            ‘Arthur’, Darla Winstead
+                        </p>
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Report Locations: 
+                            </span>
+                            Grantham Cemetery
+                        </p>
+                    </div>
+                    <div class="sections">
                     <p class="sections">
                         <span class="prompt protocol">
                             Report Summary:
                         </span><br>
-                        This report follows an email from Harriet (hpw332@mailpod.com) to 
+                        <span class="analysis">
+                            This report follows an email from Harriet (hpw332@mailpod.com) to 
                         someone named ‘Darla’ (dwinny@mailpod.com), who can be assumed to 
                         be her family member due to sharing surnames. Harriet had been speaking 
                         with a consultant (most likely a grief consultant), whose name was never 
@@ -73,35 +78,49 @@
                         Arthur. She runs, and doesn’t get followed. Harriet asks Darla if she’s 
                         free, as she’s afraid of staying at her home due to her newfound fear 
                         of Arthur.
+                        </span>
                     </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Entity Influence: 
-                        </span><br>
-                        Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
-                        reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
-                        are within the suddenly off-putting behavior of the consultant, 
-                        ‘Arthur’s features being mismatched, mentions of his shape being ‘wrong’, 
-                        something having potentially been pressing against his skin from the 
-                        inside, and ‘Arthur’ saying “Some of him.” in response to Harriet.
-                    </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Follow-up Summary:
-                        </span><br>
-                        Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
-                        let him do, as she believes nobody reads the reports they file. Gwen steps 
-                        in and suggests, instead, to file it under ‘Reanimation, partial’ and 
-                        cross-link it with ‘regret.’ She also adds that it could fall under 
-                        ‘Amalgamative, semi.’ Sam goes with Gwen’s first suggestion, which Alice 
-                        doesn’t exactly like.
-                    </p>
-                    <p class="sections">
-                        <span class="prompt protocol">
-                            Of Significance:
-                        </span><br>
-                        Nothing of particular significance has been noted as of yet in this report.
-                    </p>
+                    </div>
+                    <div class="sections">
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Entity Influence: 
+                            </span><br>
+                            <span class="analysis">
+                                Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
+                            reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
+                            are within the suddenly off-putting behavior of the consultant, 
+                            ‘Arthur’s features being mismatched, mentions of his shape being ‘wrong’, 
+                            something having potentially been pressing against his skin from the 
+                            inside, and ‘Arthur’ saying “Some of him.” in response to Harriet.
+                            </span>
+                        </p>
+                    </div>
+                    <div class="sections">
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Follow-up Summary:
+                            </span><br>
+                            <span class="analysis">
+                                Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
+                            let him do, as she believes nobody reads the reports they file. Gwen steps 
+                            in and suggests, instead, to file it under ‘Reanimation, partial’ and 
+                            cross-link it with ‘regret.’ She also adds that it could fall under 
+                            ‘Amalgamative, semi.’ Sam goes with Gwen’s first suggestion, which Alice 
+                            doesn’t exactly like.
+                            </span>
+                        </p>
+                    </div>
+                    <div class="sections">
+                        <p class="sections">
+                            <span class="prompt protocol">
+                                Of Significance:
+                            </span><br>
+                            <span class="analysis">
+                                Nothing of particular significance has been noted as of yet in this report.
+                            </span>
+                        </p>
+                    </div>
                 </div>
                 <div>
                     <h6 class="protocol">
