deleted:    magpod/protocol/episode analysis template.html 	new file:   magpod/protocol/episode-test.html 	modified:   magpod/protocol/episodes/tmp001.html 	new file:   test.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -130,7 +130,7 @@
             </div>
         </article>
         <aside>
-            <div class="sidebar">
+            <div>
                 The Magnus Protocol is a podcast distributed by Rusty Quill under the 4.0 International Sharealike Liscence
             </div>
         </aside>
