--- a/magpod/protocol/episode-test.html
+++ b/magpod/protocol/episode-test.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
+
+    <title>TMP000: Test Page</title>
+
     <link rel="stylesheet" href="/test.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="flex">
