--- a/magpod/protocol/episode-test.html
+++ b/magpod/protocol/episode-test.html
@@ -27,10 +27,10 @@
 
         </section>
 
+        <h3 class="protocol">The Report</h3>
+
         <section class="info">
 
-            <h3 class="protocol">The Report</h3>
-            
             <div class="sect">
                 <p>
                     <span class="prompt protocol">
@@ -115,9 +115,9 @@
 
         </section>
 
-        <section class="info">
+        <h3 class="protocol">The Rest</h3>
 
-            <h3 class="protocol">The Rest</h3>
+        <section class="info">
 
             <div class="sect">
                 <p>
@@ -162,6 +162,7 @@
                 <p class="prompt protocol">
                     Of Significance:
                 </p>
+                <p class="analysis">
                     Episode report-unrelated events of significance.
                 </p>
             </div>
