modified:   magpod/protocol/episode-test.html 	modified:   test.css

--- a/magpod/protocol/episode-test.html
+++ b/magpod/protocol/episode-test.html
@@ -21,7 +21,7 @@
 
             <h2 class="protocol">TMP<span class="epnum">000</span>: Title</h2>
 
-            <div class="tmpepdesc">
+            <div class="epdesc protocol">
                 Official episode description.
             </div>
 
