modified:   magpod/protocol/episode-test.html 	modified:   test.css

--- a/magpod/protocol/episode-test.html
+++ b/magpod/protocol/episode-test.html
@@ -180,8 +180,12 @@
 
     <aside>
 
-        <div class="sidebar">
-            Sidebar shit, I guess Lol
+        <div>
+            Sidebar shit, I guess 
+        </div>
+        
+        <div>
+            Lol
         </div>
 
     </aside>
