modified:   magpod/protocol/episodes/tmp001.html

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -30,7 +30,7 @@
 
         </section>
 
-        <h3 class="protocol">The Report</h3>
+        <h3 class="protocol">The (First) Report</h3>
 
         <section class="info">
 
@@ -74,9 +74,9 @@
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Report Summary:
-                </p>
+                </span></p>
                 <p class="analysis">
                     This report follows an email from Harriet (hpw332@mailpod.com) to 
                     someone named ‘Darla’ (dwinny@mailpod.com), who can be assumed to 
@@ -96,9 +96,9 @@
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Entity Influence: 
-                </p>
+                </span></p>
                 <p class="analysis">
                     Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
                     reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
@@ -110,9 +110,9 @@
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Follow-up Summary:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
                     let him do, as she believes nobody reads the reports they file. Gwen steps 
@@ -124,9 +124,9 @@
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Of Significance:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Nothing of particular significance has been noted as of yet in this report.
                 </p>
@@ -160,27 +160,27 @@
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Events Summarized:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Summarize report-unrelated events.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                         Entity Influences:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Enter findings.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Of Significance:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Episode report-unrelated events of significance.
                 </p>
