--- a/magpod/protocol/template.html
+++ b/magpod/protocol/template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
 
-    <title>TMP001: First Shift</title>
+    <title>TMP000: Test Page</title>
 
     <link rel="stylesheet" href="/test.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,13 +19,10 @@
     <article>
         <section>
 
-            <h2 class="protocol">TMP<span class="epnum">001</span>: First Shift</h2>
+            <h2 class="protocol">TMP<span class="epnum">000</span>: Title</h2>
 
             <div class="epdesc protocol">
-                <b>CAT1RBC5257-12052022-09012024</b><br>
-                Reanimation (Partial) -/- Regret [Email]<br>
-                <b>CAT23RAB2155-10042022-09012024</b><br>
-                Transformation (eyes) -/- Trespass [chat log].
+                Official episode description.
             </div>
 
         </section>
@@ -39,21 +36,21 @@
                     <span class="prompt protocol">
                         Case File:
                     </span>
-                    CAT1RBC5257-12052022-09012024
+                    Codename
                 </p>
 
                 <p>
                     <span class="prompt protocol">
                         Report Giver/Subject:
                     </span>
-                    Harriet Winstead
+                    Name
                 </p>
 
                 <p>
                     <span class="prompt protocol">
                         Report Reader: 
                     </span>
-                    NORRIS
+                    Name
                 </p>
             </div>
 
@@ -62,73 +59,57 @@
                     <span class="prompt protocol">
                         Report Appearances:
                     </span>
-                    ‘Arthur’, Darla Winstead
+                    Name(s)
                 </p>
 
                 <p>
                     <span class="prompt protocol">
                         Report Locations: 
                     </span>
-                    Grantham Cemetery
+                    Location(s)
+                </p>
+
+                <p>
+                    <span class="prompt protocol">
+                        Report Artifacts: 
+                    </span>
+                    Artifact(s)
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Report Summary:
-                </p>
+                </span></p>
                 <p class="analysis">
-                    This report follows an email from Harriet (hpw332@mailpod.com) to 
-                    someone named ‘Darla’ (dwinny@mailpod.com), who can be assumed to 
-                    be her family member due to sharing surnames. Harriet had been speaking 
-                    with a consultant (most likely a grief consultant), whose name was never 
-                    mentioned, as she was mourning the loss of Arthur, her late partner of 
-                    20 years. The consultant told Harriet to go to Grantham Cemetery over 
-                    the phone one night; She mentions how he sounded excited in an 
-                    off-putting way on that phone call, which was unlike him. At the 
-                    cemetery, instead of the consultant, she finds ‘Arthur’; A discolored, 
-                    mismatched, undead version of Arthur. It sounded just like Arthur, and 
-                    it recognized Harriet. When asked, it responded that it was ‘some of’ 
-                    Arthur. She runs, and doesn’t get followed. Harriet asks Darla if she’s 
-                    free, as she’s afraid of staying at her home due to her newfound fear 
-                    of Arthur.
+                    Summarize the report.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Entity Influence: 
-                </p>
+                </span></p>
                 <p class="analysis">
-                    Primarily The End; seen in the death, graveyard/cemetery, and [partial] 
-                    reanimation of Arthur. Potentially mixed with The Stranger; hints of it 
-                    are within the suddenly off-putting behavior of the consultant, 
-                    ‘Arthur’s features being mismatched, mentions of his shape being ‘wrong’, 
-                    something having potentially been pressing against his skin from the 
-                    inside, and ‘Arthur’ saying “Some of him.” in response to Harriet.
+                    Enter findings.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Follow-up Summary:
-                </p>
+                </span></p>
                 <p class="analysis">
-                    Sam was planning on filing it under ‘Zombies,’ to which Alice was going to 
-                    let him do, as she believes nobody reads the reports they file. Gwen steps 
-                    in and suggests, instead, to file it under ‘Reanimation, partial’ and 
-                    cross-link it with ‘regret.’ She also adds that it could fall under 
-                    ‘Amalgamative, semi.’ Sam goes with Gwen’s first suggestion, which Alice 
-                    doesn’t exactly like.
+                    Summarize the follow-up to the report.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Of Significance:
-                </p>
+                </span></p>
                 <p class="analysis">
-                    Nothing of particular significance has been noted as of yet in this report.
+                    Significant happenings within the report and its follow-up.
                 </p>
             </div>
 
@@ -160,27 +141,27 @@
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Events Summarized:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Summarize report-unrelated events.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                         Entity Influences:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Enter findings.
                 </p>
             </div>
 
             <div class="sect">
-                <p class="prompt protocol">
+                <p><span class="prompt protocol">
                     Of Significance:
-                </p>
+                </span></p>
                 <p class="analysis">
                     Episode report-unrelated events of significance.
                 </p>
@@ -202,7 +183,7 @@
         <div>
             Sidebar shit, I guess 
         </div>
-        
+
         <div>
             Lol
         </div>
