--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -200,11 +200,21 @@
     <aside>
 
         <div>
-            Sidebar shit, I guess 
+            <a href="//mortalgarden.github.io/magpod/protocol/characters.html">character list.</a>
         </div>
-        
+
         <div>
-            Lol
+            <a href="//mortalgarden.github.io/magpod/protocol/episodes.html">episode list.</a>
+        </div>
+
+        <div>
+            <a href="//mortalgarden.github.io/magpod/archives.html">the magnus archives.</a>
+        </div>
+
+        <div class="key">
+            <div class="imp protocol">important</div>
+            <div class="sus protocol">suspected/unconfirmed</div>
+            <div class="ment">just mentioned</div>
         </div>
 
     </aside>
