modified:   magpod/protocol/episodes/tmp001.html 	modified:   magpod/protocol/template.html 	modified:   style.css 	modified:   test.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -8,7 +8,7 @@
 
     <title>TMP001: First Shift</title>
 
-    <link rel="stylesheet" href="/test.css"/>
+    <link rel="stylesheet" href="/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -199,6 +199,13 @@
 
     <aside>
 
+        <div class="key">
+            key:
+            <div class="imp protocol">important</div>
+            <div class="sus protocol">suspected/unconfirmed</div>
+            <div class="ment">just mentioned</div>
+        </div>
+
         <div>
             <a href="//mortalgarden.github.io/magpod/protocol/characters.html">character list.</a>
         </div>
@@ -210,13 +217,7 @@
         <div>
             <a href="//mortalgarden.github.io/magpod/archives.html">the magnus archives.</a>
         </div>
-
-        <div class="key">
-            <div class="imp protocol">important</div>
-            <div class="sus protocol">suspected/unconfirmed</div>
-            <div class="ment">just mentioned</div>
-        </div>
-
+        
     </aside>
 
 </body>
