modified:   magpod/protocol/episodes/tmp001.html

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -207,17 +207,17 @@
         </div>
 
         <div>
-            <a href="//mortalgarden.github.io/magpod/protocol/characters.html">character list.</a>
+            <a href="//mortalgarden.github.io/magpod/protocol/characters.html">characters.</a>
         </div>
 
         <div>
-            <a href="//mortalgarden.github.io/magpod/protocol/episodes.html">episode list.</a>
+            <a href="//mortalgarden.github.io/magpod/protocol/episodes.html">episodes.</a>
         </div>
 
         <div>
-            <a href="//mortalgarden.github.io/magpod/archives.html">the magnus archives.</a>
+            <a href="//mortalgarden.github.io/magpod/archives.html">magnus archives.</a>
         </div>
-        
+
     </aside>
 
 </body>
