modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -241,7 +241,7 @@
                     Entity Influence: 
                 </span></p>
                 <p class="analysis">
-                    Primarily, and seemingly only, <b>The Eye;</b>The main focus of the 
+                    Primarily, and seemingly only, <b>The Eye;</b> The main focus of the 
                     episode, <b>The Magnus Institute,</b> itself 
                     having been built in reverence to Beholding, RedCanary’s <b>constant paranoia</b> 
                     after the excursion, RedCanary <b>pursuing the knowledge to their [implied] demise.</b> 
@@ -357,7 +357,7 @@
             key:
             <div class="imp protocol">important</div>
             <div class="sus protocol">suspected/unconfirmed</div>
-            <div class="ment">just mentioned</div>
+            <div class="ment protocol">just mentioned</div>
         </div>
 
         <div>
