modified:   magpod/protocol/episodes/tmp001.html

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -39,7 +39,9 @@
                     <span class="prompt protocol">
                         Case File: 
                     </span>
-                    CAT1RBC5257-12052022-09012024
+                    <span class="sect">
+                        CAT1RBC5257-12052022-09012024
+                    </span>
                 </p>
 
                 <p>
