modified:   magpod/protocol/episodes/tmp001.html

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -291,7 +291,9 @@
                     <span class="prompt protocol">
                         Appearances: 
                     </span>
-                    Alice Dyer, Colin, Gwendolyn Bouchard, Lena, Samama Khalid, Teddy
+                    <span class="sect">
+                        Alice Dyer, Colin, Gwendolyn Bouchard, Lena, Samama Khalid, Teddy
+                    </span>
                 </p>
                 <p>
                     <span class="prompt protocol">
