modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -286,10 +286,12 @@
 
             <div class="sect">
                 <p>
+                    <span class="sect">
                     <span class="prompt protocol">
                         Appearances: 
                     </span>
                     Alice Dyer, Colin, Gwendolyn Bouchard, Lena, Samama Khalid, Teddy
+                    </span>
                 </p>
                 <p>
                     <span class="prompt protocol">
