modified:   magpod/protocol/episodes/tmp001.html 	modified:   style.css

--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -19,7 +19,7 @@
     <article>
         <section>
 
-            <h2 class="protocol">TMP<span class="epnum">001</span>: First Shift</h2>
+            <h2 class="protocol">TMP<span>001</span>: First Shift</h2>
 
             <div class="epdesc protocol">
                 <b>CAT1RBC5257-12052022-09012024</b><br>
