--- a/magpod/protocol/episodes/tmp001.html
+++ b/magpod/protocol/episodes/tmp001.html
@@ -8,7 +8,7 @@
 
     <title>TMP001: First Shift</title>
 
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="/protocol/episodes/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
