--- a/magpod/protocol/ep/tmp001.html
+++ b/magpod/protocol/ep/tmp001.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
     <meta charset="utf-8" />
 
-    <title>TMP001: First Shift</title>
-
-    <link rel="stylesheet" href="/protocol/episodes/style.css"/>
+    
+    <link rel="stylesheet" href="protocol-ep.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
+    <title>TMP001: First Shift</title>
+    
 </head>
 
 <body class="flex">
@@ -30,7 +31,7 @@
 
         </section>
 
-        <h3 class="protocol">The (First) Report</h3>
+        <h3 class="protocol">The (First) Report <a class="jump" id="First-Report">&#10687;</a></h3>
 
         <section class="info">
 
@@ -134,7 +135,7 @@
 
         </section>
 
-        <h3 class="protocol">The (Second) Report</h3>
+        <h3 class="protocol">The (Second) Report <a class="jump" id="Second-Report">&#10687;</a></h3>
 
         <section class="info">
 
@@ -280,7 +281,7 @@
 
         </section>
 
-        <h3 class="protocol">The Rest</h3>
+        <h3 class="protocol">The Rest <a class="jump" id="The-Rest">&#10687;</a></h3>
 
         <section class="info">
 
@@ -344,7 +345,7 @@
         <section>
 
             <h6 class="protocol">
-                ❝ It frightens me now. I look at the shadows, not the lights.<br>
+                ❝ It frightens me now. I look at the shadows, not the lights.
                 They hide whatever it was that took him away from me. ❞
             </h6>
 
@@ -360,18 +361,36 @@
             <div class="ment protocol">just mentioned</div>
         </div>
 
-        <div>
-            <a href="//mortalgarden.github.io/magpod/protocol/characters.html">characters.</a>
-        </div>
+        <div class="navlink">
+            <div class="nav">
+                <div>page nav</div>
+                <div>
+                <a href="#First-Report">(first) report</a>  
+                </div>
+                <div>
+                <a href="#Second-Report">(second) report</a>
+                </div>
+                <div>
+                <a href="#The-Rest">the rest</a>
+                </div>
+            </div>
 
-        <div>
-            <a href="//mortalgarden.github.io/magpod/protocol/episodes.html">episodes.</a>
+            <div class="links">
+                <div>site nav</div>
+                <div>
+                    <a href="//mortalgarden.github.io/magpod/protocol/characters.html">
+                        character list</a>
+                </div>
+                <div>
+                    <a href="//mortalgarden.github.io/magpod/protocol/episodes.html">
+                        episodes list</a>
+                </div>
+                <div>
+                    <a href="//mortalgarden.github.io/magpod/archives.html">
+                        magnus archives?</a>
+                </div>
+            </div>
         </div>
-
-        <div>
-            <a href="//mortalgarden.github.io/magpod/archives.html">magnus archives.</a>
-        </div>
-
     </aside>
 
 </body>
