renamed:    magpod/archives/char/jonathan-sims.html -> magpod/magnusarchives/char/jonathan-sims.html 	renamed:    magpod/archives/characters.html -> magpod/magnusarchives/characters.html 	renamed:    magpod/archives/ep/mag001.html -> magpod/magnusarchives/ep/mag001.html 	renamed:    magpod/archives/episodes.html -> magpod/magnusarchives/episodes.html 	renamed:    magpod/protocol/char/samama-khalid.html -> magpod/magnusprotocol/char/samama-khalid.html 	renamed:    magpod/protocol/characters.html -> magpod/magnusprotocol/characters.html 	renamed:    magpod/protocol/ep/protocol-ep.css -> magpod/magnusprotocol/ep/protocol-ep.css 	renamed:    magpod/protocol/ep/tmp001.html -> magpod/magnusprotocol/ep/tmp001.html 	renamed:    magpod/protocol/episodes.html -> magpod/magnusprotocol/episodes.html 	renamed:    magpod/protocol/template.html -> magpod/magnusprotocol/template.html 	modified:   magpod/protocol.html

--- a/magpod/magnusprotocol/episodes.html
+++ b/magpod/magnusprotocol/episodes.html
@@ -9,6 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="/magpod/protocol/characters/samama-khalid.html">samama-khalid</a>
+    <a href="/magnusprotocol/ep/tmp001.html">episode one</a>
 </body>
 </html>
