modified:   magnusprotocol/template.html

--- a/magnusprotocol/template.html
+++ b/magnusprotocol/template.html
@@ -8,7 +8,7 @@
 
     <title>TMP000: Test Page</title>
 
-    <link rel="stylesheet" href="/protocol-ep.css"/>
+    <link rel="stylesheet" href="protocol-ep.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
