modified:   magnusprotocol/ep/protocol-ep.css 	modified:   magnusprotocol/ep/template.html 	new file:   magnusprotocol/ep/test.css 	new file:   magnusprotocol/ep/test.html 	modified:   magnusprotocol/ep/tmp001.html

--- a/magnusprotocol/ep/template.html
+++ b/magnusprotocol/ep/template.html
@@ -169,7 +169,7 @@
 
         </section>
 
-        <section>
+        <section class = "quote">
 
             <h6 class="protocol">
                 ❝Episode quote.❞
