--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -28,7 +28,7 @@
 
 
     <main class="responsive">
-      <article class="border medium no-padding">
+      <article class="absolute border medium no-padding">
         <div class="padding absolute center middle">
           <h2>title</h2>
           <div class="epdesc">episode description :3</div>
